00Intro/manifests/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  namespace: k8s-demo
spec:
  type: ClusterIP
  selector:
    app: demo-web
  ports:
    - name: http
      port: 80
      targetPort: http
